# simconnect-toolbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  simconnect-toolbox.prj
matlab/: SimConnectToolbox.slx  SimConnectToolboxExample.slx  slblocks.m
sim-connect-interface/: CMakeLists.txt
sim-connect-interface/examples/: CMakeLists.txt  main-event.cpp  main-input.cpp  main-read.cpp
sim-connect-interface/include/: SimConnectDataDefinition.h  SimConnectEventInterface.h  SimConnectInputInterface.h  SimConnectVariable.h  SimConnectVariableLookupTable.h  SimConnectVariableParser.h
sim-connect-interface/src/: SimConnectData.cpp  SimConnectDataDefinition.cpp  SimConnectDataInterface.cpp  SimConnectEventInterface.cpp  SimConnectInputInterface.cpp  SimConnectVariableLookupTable.cpp
src/Factory/: Factory.cpp
src/SimConnectEvent/: SimConnectEvent.cpp  SimConnectEvent.h
src/SimConnectInput/: SimConnectInput.cpp  SimConnectInput.h
src/SimConnectInterface/: MemoryAccessor.h  SimConnectData.h  SimConnectDataDefinition.cpp  SimConnectDataDefinition.h  SimConnectDataInterface.h  SimConnectVariableParser.h  SimConnectVariableType.h
src/SimConnectInterface/example/: main-read.cpp  main-write.cpp
src/SimConnectSink/: SimConnectSink.cpp  SimConnectSink.h
src/SimConnectSinkAutopilotLaws/: SimConnectSinkAutopilotLaws.cpp  SimConnectSinkAutopilotLaws.h
src/SimConnectSinkAutopilotStateMachine/: SimConnectSinkAutopilotStateMachine.cpp  SimConnectSinkAutopilotStateMachine.h
src/SimConnectSinkAutothrust/: SimConnectSinkAutothrust.cpp  SimConnectSinkAutothrust.h
src/SimConnectSinkFbw/: SimConnectSinkFbw.cpp  SimConnectSinkFbw.h
src/SimConnectSinkFlyByWire/: SimConnectSinkFlyByWire.cpp  SimConnectSinkFlyByWire.h
src/SimConnectSource/: SimConnectSource.cpp  SimConnectSource.h
src/SimConnectSourceAutopilotEvents/: SimConnectSourceAutopilotEvents.cpp  SimConnectSourceAutopilotEvents.h
src/SimConnectSourceAutopilotLaws/: SimConnectSourceAutopilotLaws.cpp  SimConnectSourceAutopilotLaws.h
src/SimConnectSourceAutopilotStateMachine/: SimConnectSourceAutopilotStateMachine.cpp  SimConnectSourceAutopilotStateMachine.h
src/SimConnectSourceEvents/: SimConnectSourceEvents.cpp  SimConnectSourceEvents.h
src/SimConnectSourceFbw/: SimConnectSourceFbw.cpp  SimConnectSourceFbw.h
src/SimConnectSourceFbwFg/: SimConnectSourceEvents.cpp  SimConnectSourceFbwFg.cpp  SimConnectSourceFbwFg.h
src/SimConnectSourceFlyByWire/: SimConnectSourceFlyByWire.cpp  SimConnectSourceFlyByWire.h
src/SimConnectSourceLocalVariables/: SimConnectSourceLocalVariables.cpp  SimConnectSourceLocalVariables.h
src/SimConnectSourceLocalVariablesAutothrust/: SimConnectSourceLocalVariablesAutothrust.cpp  SimConnectSourceLocalVariablesAutothrust.h
